--- a/src/app/todo-list/todo-list.component.scss
+++ b/src/app/todo-list/todo-list.component.scss
@@ -25,11 +25,10 @@
 .table-footer,
 .table-row {
   display: grid;
-  grid-template-columns: 50px auto 50px;
+  grid-template-columns: 52px auto 52px;
 }
 
 .table-footer {
-  background: #fafafa;
   border-top-left-radius: 10px;
   border-top-right-radius: 10px;
 }
@@ -43,7 +42,7 @@
   display: grid;
   justify-content: center;
   align-content: center;
-  min-height: 50px;
+  min-height: 52px;
 }
 
 .table-footer-status-chb {
@@ -55,19 +54,17 @@
   cursor: pointer;
 }
 
-.table-footer-text-container,
-.table-row-text-container {
+.table-footer-text-container {
   justify-content: start;
   padding-left: 20px;
   font-weight: 600;
 }
 
 .table-row-text-container {
+  justify-content: start;
   cursor: pointer;
-}
-
-.table-row-text-container {
-  font-weight: 400;
+  line-height: 1.56;
+  padding: 14px 20px;
 }
 
 .table-footer-delete-img,
@@ -84,7 +81,7 @@
 }
 
 .table-row-text-container:hover {
-  font-weight: 600;
+  background: #f5f5f6;
 }
 
 .table-row-delete-img:hover {
@@ -95,22 +92,83 @@
   border-top: 1px solid #d5dddf;
 }
 
-.add-task-btn-container {
+.add-change-task-container {
   width: 100%;
 }
 
-.add-task-btn {
-  width: 300px;
-  margin-top: 10px;
+.display-form-btn-container {
+  display: grid;
+  justify-content: end;
+}
+
+.btn-unhide-form {
+  width: 200px;
   padding: 12px;
   border: 0;
   border-radius: 5px;
-  background: #ffdd2d;
+  //background: #ffdd2d;
   font-size: 16px;
   cursor: pointer;
   outline: none;
+  background: #efefef;
 }
 
-.add-task-btn:hover {
+.btn-unhide-form:hover {
+  //background: #ffcd33;
+  background: #e1e1e1;
+}
+.input-form-container {
+  display: grid;
+  grid-template-columns: auto 170px 150px;
+  grid-template-rows: auto auto;
+}
+
+.input-form {
+  grid-column: 1 / 4;
+}
+
+.input {
+  width: 100%;
+  margin-bottom: 10px;
+  padding: 12px;
+  border: 1px solid #d5dddf;
+  border-radius: 2px;
+  font-size: 16px;
+  outline: none;
+}
+
+.btn-cancel,
+.btn-change {
+  width: 150px;
+  padding: 12px;
+  border: 0;
+  border-radius: 5px;
+  //background: #ffdd2d;
+  font-size: 16px;
+  cursor: pointer;
+  outline: none;
+  background: #efefef;
+}
+
+.btn-cancel {
+  grid-column: 2 / 3;
+}
+
+.btn-cancel:hover {
+  background: #e1e1e1;
+}
+
+.btn-change {
+  grid-column: 3 / 4;
+  background: #ffdd2d;
+}
+
+.btn-change:enabled:hover {
   background: #ffcd33;
+}
+
+.btn-change:disabled,
+.btn-change:disabled:hover {
+  cursor: initial;
+  opacity: 50%;
 }
