--- a/src/app/todo-list/todo-list.component.scss
+++ b/src/app/todo-list/todo-list.component.scss
@@ -143,7 +143,6 @@
   padding: 12px;
   border: 0;
   border-radius: 5px;
-  //background: #ffdd2d;
   font-size: 16px;
   cursor: pointer;
   outline: none;
@@ -167,8 +166,7 @@
   background: #ffcd33;
 }
 
-.btn-change:disabled,
-.btn-change:disabled:hover {
+.btn-change:disabled {
   cursor: initial;
   opacity: 50%;
 }
