Сделан карскас формы регистрации

--- a/src/app/navigation-bar/navigation-bar.component.html
+++ b/src/app/navigation-bar/navigation-bar.component.html
@@ -21,7 +21,13 @@
       <button *ngIf="!status" class="navbar-btn-login" routerLink="/login">
         Войти
       </button>
-      <button *ngIf="!status" class="navbar-btn-register">Регистрация</button>
+      <button
+        *ngIf="!status"
+        class="navbar-btn-register"
+        routerLink="/registration"
+      >
+        Регистрация
+      </button>
       <button *ngIf="status" class="navbar-btn-logout" (click)="logout()">
         Выйти
       </button>
