--- a/src/app/registration/registration.component.scss
+++ b/src/app/registration/registration.component.scss
@@ -1,5 +1,3 @@
-@import url('https://fonts.googleapis.com/css2?family=Open+Sans:wght@600&display=swap');
-
 .main-page {
   width: 100vw;
   height: 100vh;
@@ -18,9 +16,9 @@
   display: grid;
 }
 
-.login-form {
+.registration-form {
   justify-self: center;
-  width: 350px;
+  width: 500px;
   height: min-content;
   margin: 28px;
   border-radius: 10px;
@@ -54,6 +52,7 @@ h1 {
   background: #ffdd2d;
   font-size: 16px;
   cursor: pointer;
+  outline: none;
 }
 
 .btn:disabled {
