--- a/src/app/navigation-bar/navigation-bar.component.scss
+++ b/src/app/navigation-bar/navigation-bar.component.scss
@@ -1,5 +1,6 @@
 .navbar {
   border-bottom: 1px solid #d5dddf;
+  margin-bottom: 20px;
 }
 
 .bg-light {
@@ -37,8 +38,7 @@
   background: #ffdd2d;
 }
 
-.navbar-btn-login,
-.navbar-btn-logout {
+.navbar-btn-login {
   margin-right: 0.6rem;
 }
 
