--- a/src/app/footer/footer.component.html
+++ b/src/app/footer/footer.component.html
@@ -1,5 +1,5 @@
 <footer class="footer mt-auto py-3 bg-light">
-  <div class="container">
+  <div class="container-xxl">
     <span class="text-muted">Place sticky footer content here.</span>
   </div>
 </footer>
