--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -1,33 +1,44 @@
-<div class="main-page">
-  <div class="navbar">
-    <app-navigation-bar></app-navigation-bar>
-  </div>
-  <div class="body">
-    <form class="login-form" [formGroup]="loginForm">
-      <h1>Вход</h1>
-      <label>
-        <input
-          class="input-form"
-          type="text"
-          placeholder="Логин"
-          formControlName="username"
-        />
-      </label>
-      <label>
-        <input
-          class="input-form"
-          type="password"
-          placeholder="Пароль"
-          formControlName="password"
-          (keyup.enter)="login()"
-        />
-      </label>
-      <button class="btn" (click)="login()" [disabled]="!loginForm.valid">
-        Войти
+<div class="d-flex flex-column h-100 full-page">
+  <app-navigation-bar></app-navigation-bar>
+  <main class="form-signin">
+    <form class="text-center" [formGroup]="loginForm">
+      <img
+        class="mb-2"
+        src="https://www.flaticon.com/svg/static/icons/svg/3602/3602656.svg"
+        alt="witch"
+        width="72"
+      />
+      <h1 class="h3 mb-4 font-weight-normal">Вход</h1>
+      <label for="inputEmail" class="visually-hidden">Login</label>
+      <input
+        type="email"
+        id="inputEmail"
+        class="form-control"
+        placeholder="Логин"
+        autofocus
+        formControlName="username"
+      />
+      <label for="inputPassword" class="visually-hidden">Пароль</label>
+      <input
+        type="password"
+        id="inputPassword"
+        class="form-control"
+        placeholder="Пароль"
+        formControlName="password"
+        (keyup.enter)="login()"
+      />
+      <button
+        class="btn btn-lg btn-primary btn-block mt-4"
+        type="submit"
+        (click)="login()"
+        [disabled]="!loginForm.valid"
+      >
+        Вход
       </button>
-      <p class="login-error-text" *ngIf="loginErrorStatus">
+      <p class="mt-3 mb-0 error" *ngIf="loginErrorStatus">
         Логин или пароль неверный
       </p>
     </form>
-  </div>
+  </main>
+  <app-footer class="mt-auto"></app-footer>
 </div>
