--- a/src/app/login/login.component.scss
+++ b/src/app/login/login.component.scss
@@ -1,69 +1,51 @@
-.main-page {
-  width: 100vw;
-  height: 100vh;
-  display: grid;
-  grid-template-rows: 48px auto;
+.full-page {
   background: #f5f5f6;
 }
 
-.body {
-  width: 1100px;
-  height: 100%;
-  justify-self: center;
-  padding: 20px 0;
-  margin: 0 20px;
-  color: #222222;
-  display: grid;
-}
-
-.login-form {
-  justify-self: center;
-  width: 350px;
-  height: min-content;
-  margin: 28px;
-  border-radius: 10px;
+.form-signin {
+  width: 100%;
+  max-width: 340px;
   padding: 20px;
+  align-self: center;
+  margin: auto 20px;
   background: #ffffff;
+  border-radius: 10px;
   box-shadow: 0 0 4px rgba(0, 0, 0, 0.1);
 }
 
-h1 {
-  text-align: center;
-  font-size: 32px;
-  font-weight: 600;
-  margin-bottom: 20px;
-}
-
-.input-form {
-  width: 100%;
-  margin-bottom: 10px;
-  padding: 6px 12px;
+.form-control {
+  font-size: 16px;
+  padding: 10px;
   border: 1px solid #d5dddf;
-  border-radius: 2px;
-  font-size: 16px;
-  outline: none;
 }
-.btn {
-  width: 100%;
-  margin-top: 10px;
-  padding: 12px;
+
+.form-signin input:focus {
+  box-shadow: none;
+}
+
+.form-signin input[type='email'] {
+  margin-bottom: -1px;
+  border-bottom-right-radius: 0;
+  border-bottom-left-radius: 0;
+}
+
+.form-signin input[type='password'] {
+  border-top-right-radius: 0;
+  border-top-left-radius: 0;
+  z-index: 0;
+}
+
+.btn-primary {
   border: 0;
-  border-radius: 5px;
   background: #ffdd2d;
-  font-size: 16px;
-  cursor: pointer;
+  color: #3e3e3e;
+  font-weight: 600;
 }
 
-.btn:disabled {
-  cursor: initial;
-  opacity: 50%;
-}
-
-.btn:enabled:hover {
+.btn-primary:hover {
   background: #ffcd33;
 }
 
-.login-error-text {
+.error {
   color: red;
-  margin-top: 20px;
 }
