Передалана страница регистрации

--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -8,7 +8,7 @@
         alt="witch"
         width="72"
       />
-      <h1 class="h3 mb-4 font-weight-normal">Вход</h1>
+      <h3 class="mb-4 font-weight-600">Вход</h3>
       <label for="inputEmail" class="visually-hidden">Login</label>
       <input
         type="email"
