--- a/src/app/login/login.component.scss
+++ b/src/app/login/login.component.scss
@@ -32,18 +32,20 @@
 .form-signin input[type='password'] {
   border-top-right-radius: 0;
   border-top-left-radius: 0;
-  z-index: 0;
 }
 
 .btn-primary {
   border: 0;
   background: #ffdd2d;
   color: #3e3e3e;
-  font-weight: 600;
 }
 
 .btn-primary:hover {
   background: #ffcd33;
+}
+
+.btn-primary:hover {
+  box-shadow: none;
 }
 
 .error {
