--- a/src/app/registration/registration.component.html
+++ b/src/app/registration/registration.component.html
@@ -1,45 +1,53 @@
-<div class="main-page">
-  <div class="navbar">
-    <app-navigation-bar></app-navigation-bar>
-  </div>
-  <div class="body">
-    <form class="registration-form" [formGroup]="registrationForm">
-      <h1>Регистрация</h1>
-      <label>
-        <input
-          class="input-form"
-          type="text"
-          placeholder="Логин"
-          formControlName="username"
-        />
-      </label>
-      <label>
-        <input
-          class="input-form"
-          type="password"
-          placeholder="Пароль"
-          formControlName="password1"
-        />
-      </label>
-      <label>
-        <input
-          class="input-form"
-          type="password"
-          placeholder="Повторите пароль"
-          formControlName="password2"
-          (keyup.enter)="registration()"
-        />
-      </label>
+<div class="d-flex flex-column h-100 full-page">
+  <app-navigation-bar></app-navigation-bar>
+  <main class="form-registration">
+    <form class="text-center" [formGroup]="registrationForm">
+      <img
+        class="mb-2"
+        src="https://www.flaticon.com/svg/static/icons/svg/867/867884.svg"
+        alt="witch"
+        width="72"
+      />
+      <h3 class="mb-4 font-weight-600">Регистрация</h3>
+      <label for="inputEmail" class="visually-hidden">Login</label>
+      <input
+        type="email"
+        id="inputEmail"
+        class="form-control"
+        placeholder="Логин"
+        formControlName="username"
+        autofocus
+      />
+      <label for="inputPassword" class="visually-hidden">Пароль</label>
+      <input
+        type="password"
+        id="inputPassword"
+        class="form-control"
+        placeholder="Пароль"
+        formControlName="password1"
+      />
+      <label for="repeatPassword" class="visually-hidden"
+        >Повторный пароль</label
+      >
+      <input
+        type="password"
+        id="repeatPassword"
+        class="form-control"
+        placeholder="Повторите пароль"
+        formControlName="password2"
+        (keyup.enter)="registration()"
+      />
       <button
-        class="btn"
+        class="btn btn-lg btn-primary btn-block mt-4"
         (click)="registration()"
         [disabled]="!registrationForm.valid"
       >
         Зарегестрироваться
       </button>
-      <p class="login-error-text" *ngIf="registrationErrorStatusLogin">
+      <p class="mt-3 mb-0 error" *ngIf="registrationErrorStatusLogin">
         Такой пользователь уже существует
       </p>
     </form>
-  </div>
+  </main>
+  <app-footer class="mt-auto"></app-footer>
 </div>
