Добавлены сообщения о неверно введенных данных

--- a/src/app/login/login.component.scss
+++ b/src/app/login/login.component.scss
@@ -44,10 +44,10 @@
   background: #ffcd33;
 }
 
-.btn-primary:hover {
+.btn-primary:focus {
   box-shadow: none;
 }
 
-.error {
+.error-message {
   color: red;
 }
