--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -35,7 +35,7 @@
       >
         Вход
       </button>
-      <p class="mt-3 mb-0 error" *ngIf="loginErrorStatus">
+      <p class="mt-3 mb-0 error-message" *ngIf="loginErrorStatus">
         Логин или пароль неверный
       </p>
     </form>
