--- a/src/app/registration/registration.component.scss
+++ b/src/app/registration/registration.component.scss
@@ -49,10 +49,27 @@
   background: #ffcd33;
 }
 
-.btn-primary:hover {
+.btn-primary:focus {
   box-shadow: none;
 }
 
-.error {
+.error-message {
   color: red;
+}
+
+input[id='inputEmail'].ng-touched.ng-valid,
+input[id='inputPassword'].ng-touched.ng-valid {
+  border-right: 3px solid green;
+}
+
+input[id='inputEmail'].ng-touched.ng-invalid,
+input[id='inputPassword'].ng-touched.ng-invalid {
+  border-right: 3px solid red;
+}
+
+.repeat-valid {
+  border-right: 3px solid green;
+}
+.repeat-invalid {
+  border-right: 3px solid red;
 }
