--- a/src/app/todo-list/todo-list.component.scss
+++ b/src/app/todo-list/todo-list.component.scss
@@ -1,25 +1,6 @@
-@import url('https://fonts.googleapis.com/css2?family=Open+Sans:wght@600&display=swap');
-
-.main-page {
-  width: 100vw;
-  height: 100vh;
-  display: grid;
-  grid-template-rows: 48px auto;
-}
-
-.body {
-  width: 1100px;
-  height: 100%;
-  justify-self: center;
-  padding: 20px 0;
-  margin: 0 20px;
-  color: #222222;
-}
-
 .table {
   display: grid;
   grid-template-rows: auto auto;
-  padding: 20px 0;
 }
 
 .table-footer,
@@ -169,4 +150,8 @@
 .btn-change:disabled {
   cursor: initial;
   opacity: 50%;
+}
+
+img {
+  padding: 0;
 }
