--- a/src/app/todo-list/todo-list.component.scss
+++ b/src/app/todo-list/todo-list.component.scss
@@ -1,157 +1,64 @@
-.table {
-  display: grid;
-  grid-template-rows: auto auto;
+.container-xxl {
+  padding: 0 24px;
 }
 
-.table-footer,
-.table-row {
-  display: grid;
-  grid-template-columns: 52px auto 52px;
+.status,
+.delete {
+  width: 41px;
 }
 
-.table-footer {
-  border-top-left-radius: 10px;
-  border-top-right-radius: 10px;
-}
-
-.table-footer-status-container,
-.table-footer-text-container,
-.table-footer-delete-container,
-.table-row-status-container,
-.table-row-text-container,
-.table-row-delete-container {
-  display: grid;
-  justify-content: center;
-  align-content: center;
-  min-height: 52px;
-}
-
-.table-footer-status-chb {
-  transform: scale(1.5);
-}
-
-.table-row-status-chb {
-  transform: scale(1.5);
+.form-check-input {
+  width: 18px;
+  height: 18px;
+  margin: 0;
   cursor: pointer;
 }
 
-.table-footer-text-container {
-  justify-content: start;
-  padding-left: 20px;
-  font-weight: 600;
+.form-check-input:focus {
+  box-shadow: none;
 }
 
-.table-row-text-container {
-  justify-content: start;
-  cursor: pointer;
-  line-height: 1.56;
-  padding: 14px 20px;
-}
-
-.table-footer-delete-img,
-.table-row-delete-img {
-  width: 20px;
-}
-
-.table-footer-delete-img {
-  opacity: 50%;
-}
-
-.table-row-delete-img {
+tbody .text {
   cursor: pointer;
 }
 
-.table-row-text-container:hover {
-  background: #f5f5f6;
+td img {
+  width: 18px;
+  cursor: pointer;
 }
 
-.table-row-delete-img:hover {
+td img:hover {
   filter: brightness(120%);
 }
 
-.table-row {
-  border-top: 1px solid #d5dddf;
+.btn-primary {
+  background: #ffdd2d;
+  border-color: #ffdd2d;
+  color: #3e3e3e;
+  font-weight: 600;
 }
 
-.add-change-task-container {
-  width: 100%;
+.btn-primary:hover {
+  background-color: #ffcd33;
 }
 
-.display-form-btn-container {
-  display: grid;
-  justify-content: end;
-}
-
-.btn-unhide-form {
-  width: 200px;
-  padding: 12px;
-  border: 0;
-  border-radius: 5px;
-  //background: #ffdd2d;
-  font-size: 16px;
-  cursor: pointer;
-  outline: none;
+.btn-secondary {
   background: #efefef;
+  border-color: #efefef;
+  color: #3e3e3e;
+  font-weight: 600;
+  margin-right: 0.6rem;
 }
 
-.btn-unhide-form:hover {
-  //background: #ffcd33;
-  background: #e1e1e1;
+.btn-secondary:hover {
+  background-color: #dbdbdb;
 }
-.input-form-container {
-  display: grid;
-  grid-template-columns: auto 170px 150px;
-  grid-template-rows: auto auto;
+
+.form-control:focus {
+  box-shadow: none;
+  border-color: #ced4da;
 }
 
 .input-form {
-  grid-column: 1 / 4;
-}
-
-.input {
-  width: 100%;
-  margin-bottom: 10px;
-  padding: 12px;
-  border: 1px solid #d5dddf;
-  border-radius: 2px;
-  font-size: 16px;
-  outline: none;
-}
-
-.btn-cancel,
-.btn-change {
-  width: 150px;
-  padding: 12px;
-  border: 0;
-  border-radius: 5px;
-  font-size: 16px;
-  cursor: pointer;
-  outline: none;
-  background: #efefef;
-}
-
-.btn-cancel {
-  grid-column: 2 / 3;
-}
-
-.btn-cancel:hover {
-  background: #e1e1e1;
-}
-
-.btn-change {
-  grid-column: 3 / 4;
-  background: #ffdd2d;
-}
-
-.btn-change:enabled:hover {
-  background: #ffcd33;
-}
-
-.btn-change:disabled {
-  cursor: initial;
-  opacity: 50%;
-}
-
-img {
-  padding: 0;
+  padding-bottom: 10px;
 }
