Увеличена высота строк в таблице

--- a/src/app/todo-list/todo-list.component.html
+++ b/src/app/todo-list/todo-list.component.html
@@ -13,7 +13,7 @@
               [disabled]="true"
             />
           </th>
-          <th class="text">Текст</th>
+          <th class="text align-middle">Текст</th>
           <th class="delete"></th>
         </tr>
       </thead>
@@ -32,7 +32,10 @@
               (click)="changeIsDoneTask(i)"
             />
           </td>
-          <td class="text" (click)="displayInputTaskContainer('change', i)">
+          <td
+            class="text align-middle"
+            (click)="displayInputTaskContainer('change', i)"
+          >
             {{ task.text }}
           </td>
           <td class="delete position-relative">
@@ -46,7 +49,7 @@
         </tr>
       </tbody>
     </table>
-    <section>
+    <section class="mt-4">
       <button
         class="btn btn-secondary"
         (click)="displayInputTaskContainer('add')"
@@ -55,7 +58,7 @@
         Добавить задачу
       </button>
     </section>
-    <section *ngIf="isUnhideAddChangeTaskContainer">
+    <section class="mt-4" *ngIf="isUnhideAddChangeTaskContainer">
       <form class="input-form" [formGroup]="addChangeTaskGroup">
         <label for="inputText" class="visually-hidden"></label>
         <input
