--- a/src/app/not-found/not-found.component.html
+++ b/src/app/not-found/not-found.component.html
@@ -1,6 +1,15 @@
-<div class="main-container">
-  <div class="error-container">
-    <p class="error-number">404</p>
-    <p class="error-text">Такой страницы нет</p>
-  </div>
+<div class="d-flex flex-column h-100 full-page">
+  <main class="not-found text-center mt-10">
+    <img
+      class="mb-2"
+      src="https://www.flaticon.com/svg/static/icons/svg/3277/3277216.svg"
+      alt="witch"
+      width="72"
+    />
+    <h1 class="font-weight-600 mb-0">404</h1>
+    <h4>Страница не найдена</h4>
+  </main>
+  <button type="button" class="btn btn-link mt-2" routerLink="/">
+    Вернуться на главную
+  </button>
 </div>
