--- a/src/app/not-found/not-found.component.html
+++ b/src/app/not-found/not-found.component.html
@@ -1,4 +1,5 @@
 <div class="d-flex flex-column h-100 full-page">
+  <app-navigation-bar></app-navigation-bar>
   <main class="not-found text-center mt-10">
     <img
       class="mb-2"
@@ -9,7 +10,9 @@
     <h1 class="font-weight-600 mb-0">404</h1>
     <h4>Страница не найдена</h4>
   </main>
+  <!--  TODO: Убрать обводку при "focus"-->
   <button type="button" class="btn btn-link mt-2" routerLink="/">
     Вернуться на главную
   </button>
+  <app-footer class="mt-auto"></app-footer>
 </div>
