Добавлена подписка и новый массив todoList2 для данных с сервера

--- a/src/app/todo-list/todo-list.component.html
+++ b/src/app/todo-list/todo-list.component.html
@@ -48,7 +48,7 @@
       <tbody>
         <tr
           *ngFor="
-            let task of todoList
+            let task of todoList2
               | search: searchText
               | sort: sortOrder:sortReverse;
             index as i
