--- a/src/app/todo-list/todo-list.component.html
+++ b/src/app/todo-list/todo-list.component.html
@@ -48,28 +48,27 @@
       <tbody>
         <tr
           *ngFor="
-            let task of todoList2
+            let task of todoList
               | search: searchText
-              | sort: sortOrder:sortReverse;
-            index as i
+              | sort: sortOrder:sortReverse
           "
         >
           <td class="status position-relative">
             <label
-              for="inputCheckboxBody{{ i }}"
+              for="inputCheckboxBody{{ task.id }}"
               class="visually-hidden"
             ></label>
             <input
               type="checkbox"
-              id="inputCheckboxBody{{ i }}"
+              id="inputCheckboxBody{{ task.id }}"
               class="form-check-input position-absolute top-50 left-50 translate-middle"
               [checked]="task.isDone"
-              (click)="changeIsDoneTask(i)"
+              (click)="changeIsDoneTask(task.id)"
             />
           </td>
           <td
             class="text align-middle"
-            (click)="displayInputTaskContainer('change', i)"
+            (click)="displayInputTaskContainer('change', task.id, task.text)"
           >
             {{ task.text }}
           </td>
@@ -78,7 +77,7 @@
               class="position-absolute top-50 left-50 translate-middle"
               src="https://www.flaticon.com/svg/static/icons/svg/1828/1828843.svg"
               alt="Удалить"
-              (click)="deleteTask(i)"
+              (click)="deleteTask(task.id)"
             />
           </td>
         </tr>
@@ -105,7 +104,10 @@
           (keyup.enter)="addChangeTextTask()"
         />
       </form>
-      <button class="btn btn-secondary" (click)="cancelAddChangeTask()">
+      <button
+        class="btn btn-secondary"
+        (click)="this.isUnhideAddChangeTaskContainer = false"
+      >
         Отмена
       </button>
       <button
@@ -117,5 +119,7 @@
       </button>
     </section>
   </main>
+  <p>Текущий ID: {{ idTaskChange }}</p>
+  <p>Текщуий todoList: {{ todoList | json }}</p>
   <app-footer class="mt-auto"></app-footer>
 </div>
