Добавлено изменение текста задачи и его статуса (не обновляется в реальном времени)

--- a/src/app/todo-list/todo-list.component.html
+++ b/src/app/todo-list/todo-list.component.html
@@ -63,7 +63,7 @@
               id="inputCheckboxBody{{ task.id }}"
               class="form-check-input position-absolute top-50 left-50 translate-middle"
               [checked]="task.isDone"
-              (click)="changeIsDoneTask(task.id)"
+              (click)="changeIsDoneTask(task.id, task.isDone)"
             />
           </td>
           <td
